

// Tabela que armazena informações dos usuários, com atributos como email, 
// nome, sobrenome, sexo, endereço, data de nascimento e telefone.
Table customer {
  customer_id integer [primary key, note: 'identificador único do cliente']
  email varchar [note: 'endereço eletrônico do cliente']
  nome varchar [note: 'primeiro nome do cliente']
  sobrenome varchar [note: 'sobrenome do cliente']
  sexo char [note: 'sexo do cliente']
  endereco varchar [note: 'endereço do cliente']
  data_nascimento date [note: 'data de nascimento do cliente']
  telefone varchar [note: 'telefone do cliente']
}

// Tabela que armazena as categorias dos itens, com atributos como descrição e path.
Table category {
    category_id integer [primary key, note: 'identificador único da categoria']
    descricao varchar [note: 'descrição da categoria']
    path varchar [note: 'url']
    // Sugestão de melhoria
    // category_above integer [null, note: 'category_id da categoria pai na hierarquia de produtos'] // * Autorelacionamento com a categoria pai deste category_id
}

// Tabela que armazena os produtos, com atributos como nome, descrição, 
// preço, estado, data de baixa e uma chave estrangeira para a categoria.
Table item {
    item_id integer [primary key, note: 'identificador único do item']
    nome varchar [note: 'nome do item']
    descricao char [note: 'descrição do item']
    preco integer [note: 'preço do item']
    status varchar [note: 'status do item']
    data_referencia date [note: 'data de referencia do item']
    category_id integer [FOREIGN KEY, note: 'identificador único da categoria']
}

// Tabela que armazena as transações de compra, com atributos como data 
// da ordem e uma chave estrangeira para o cliente.
Table order {
    order_id integer [primary key, note: 'identificador único do pedido']
    data_order date [note: 'data do pedido']
    customer_id integer [FOREIGN KEY, note: 'identificador único do cliente']
}

// Tabela de relacionamento entre Order e Item, com atributos 
// como quantidade e preço do item na ordem.
Table order_item {
    order_id integer [FOREIGN KEY, note: 'identificador único do pedido']
    item_id integer [FOREIGN KEY, note: 'identificador único do item']
    quantidade integer [note: 'quantidade de itens']
    preco integer [note: 'preço do pedido']
}

// Relacionamantos
//- Um Customer pode fazer várias Orders.
//- Uma Order pode conter vários Items.
//- Um Item pertence a uma Category.
Ref: customer.customer_id < order.customer_id
Ref:  order.order_id < order_item.order_id
Ref:  item.category_id > category.category_id
Ref:  order_item.item_id > item.item_id
// Ref:  category.category_above > category.category_id // Sugestão de melhoria
